data/forge_javadoc/1.7.10/processed/net_minecraft_world_gen_structure_StructureVillagePieces.Start.md
# StructureVillagePieces.Start

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.Well → net.minecraft.world.gen.structure.StructureVillagePieces.Start

## Class signature

```java
public static class StructureVillagePieces.Start extends StructureVillagePieces.Well
```

## Constructors

- `Start()`
- `Start(WorldChunkManager p_i2104_1_, int p_i2104_2_, java.util.Random p_i2104_3_, int p_i2104_4_, int p_i2104_5_, java.util.List p_i2104_6_, int p_i2104_7_)`

## Methods

- `WorldChunkManager getWorldChunkManager()`

## Fields

- `java.util.List field_74930_j`
- `java.util.List field_74932_i`
- `boolean inDesert`
- `java.util.List structureVillageWeightedPieceList`
- `StructureVillagePieces.PieceWeight structVillagePieceWeight`
- `int terrainType`
- `WorldChunkManager worldChunkMngr`