data/forge_javadoc/1.9.4/processed/net_minecraft_world_gen_structure_StructureVillagePieces.Start.md
# StructureVillagePieces.Start

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.Well → net.minecraft.world.gen.structure.StructureVillagePieces.Start

## Class signature

```java
public static class StructureVillagePieces.Start extends StructureVillagePieces.Well
```

## Constructors

- `Start()`
- `Start(BiomeProvider chunkManagerIn, int p_i2104_2_, java.util.Random rand, int p_i2104_4_, int p_i2104_5_, java.util.List<StructureVillagePieces.PieceWeight> p_i2104_6_, int p_i2104_7_)`

## Methods

- `BiomeProvider getBiomeProvider()`

## Fields

- `Biome biome`
- `boolean inDesert`
- `java.util.List<StructureComponent> pendingHouses`
- `java.util.List<StructureComponent> pendingRoads`
- `java.util.List<StructureVillagePieces.PieceWeight> structureVillageWeightedPieceList`
- `StructureVillagePieces.PieceWeight structVillagePieceWeight`
- `int terrainType`
- `BiomeProvider worldChunkMngr`